# daily_ruster_man

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  TODO.md  bacon.toml  ci_check.sh  rustfmt.toml
.github/workflows/: ci_check.yml
doc/: config.toml  example.template  examples.md  usage.md
src/: lib.rs  main.rs
src/cli/: app_args.rs  deletion_arguments.rs  edit_argument.rs  edit_command.rs  edit_year.rs  list_command.rs  mod.rs  month_edit_command.rs  month_list_command.rs  prompt.rs
src/core/: app_config.rs  app_options.rs  daily_filtering.rs  daily_names.rs  data_models.rs  date_filtering.rs  date_models.rs  delete_actions.rs  file_access.rs  list_queries.rs  mod.rs  open_actions.rs  placeholder.rs  process_handling.rs  template.rs  test_daily_filtering.rs
src/core/app_config/: path_from_config.rs
src/core/app_options/: option_sources.rs
src/core/conf/: app_config.rs  config.rs  mod.rs
src/core/date_models/: find_by.rs  mod.rs  open_by.rs  units_validated.rs
src/core/dates_names/: daily_names.rs  mod.rs  monthly_name.rs  test_daily_names.rs  yearly_name.rs
tests/: delete_journals.rs  list_journals.rs  open_journals.rs
tests/common/: mod.rs
tests/snapshots/: list_journals__should_list_all_daily_journal_in_months.snap  list_journals__should_list_all_daily_journals.snap  list_journals__should_list_all_daily_journals_in_certain_year.snap  list_journals__should_list_all_monthly_journals.snap  list_journals__should_list_all_yearly_journals.snap  list_journals__should_list_exact_daily_journal_by_date.snap  list_journals__should_list_exact_monthly_journals.snap  list_journals__should_list_monthly_journals_in_certain_year.snap
(+10 files in other folders)
