[package]
name = "daily_ruster_man"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow ={version = "1.0.68", features = ["backtrace"]} 

chrono = {version = "0.4.23", features = ["clock"]} 
clap = { version = "4.0.32", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"

test-case = "2.2.2"
derive-new = "0.5.9"
thiserror = "1.0.38"
getset = "0.1.2"
parse-display= "0.8.0"

